--- a/A4_Setup.ipynb
+++ b/A4_Setup.ipynb
@@ -51,10 +51,10 @@
     "conda install -c conda-forge ipywidgets umap-learn\n",
     "jupyter labextension install @jupyter-widgets/jupyterlab-manager\n",
     "conda install scipy matplotlib beautifulsoup4 requests scikit-image\n",
-    "pip install face_recognition\n",
+    "pip install face_recognition kaggle\n",
     "```\n",
     "7. You might need to install Git, depending on your system configuration. You also may need cmake, installed through homebrew (`brew install cmake`) to install the `face_recognition' library.\n",
-    "8. Clone the [workshop repository](https://github.com/zentralwerkstatt/ESU): `git clone https://github.com/zentralwerkstatt/ESU.git`.\n",
+    "8. Clone the [workshop repository](https://github.com/zentralwerkstatt/ESU): `git clone https://github.com/zentralwerkstatt/esu2019.git`.\n",
     "\n",
     "If everything worked, you should be able to run `jupyter-lab` without errors. A browser window will open with the Jupyter Lab interface. There, by clicking the \"File\" menu and the selecting \"New/Notebook\", a new Juypter notebook will open. Click on the first cell and enter `print('Hello world!')`, then press `Ctrl + Enter`. The text \"Hello world!\" will be printed below the cell. Congratulations, you are all set up!"
    ]
