--- a/A7_Dataset_Collection.ipynb
+++ b/A7_Dataset_Collection.ipynb
@@ -187,6 +187,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## A questionable mega-dataset: ImageNet\n",
+    "\n",
+    "- What is it: http://www.image-net.org/\n",
+    "- Download the ILSVRC2012 subset: http://www.image-net.org/challenges/LSVRC/2012/nonpub-downloads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Scraping a dataset: MoMA example \n",
     "\n",
     "Some datasets are harder to scrape then others. The MoMA website is a particular easy example. Generally, the process is always the same: inspect the URL and source code of the website with regard to how it presents a single work/image file. Then automate the this process."
