--- a/A2_Setup.ipynb
+++ b/A2_Setup.ipynb
@@ -44,16 +44,15 @@
     "2. Open a terminal and create a new [conda environment](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html) with the command `conda create -n esu2019`.\n",
     "3. Activate the environment: `conda activate esu2019`.\n",
     "4. Install [Juypter](https://jupyter.org/) and [Jupyter Lab](https://github.com/jupyterlab/jupyterlab): `conda install jupyter jupyterlab`.\n",
-    "5. Install [PyTorch](https://pytorch.org/) : `conda install pytorch torchvision -c pytorch`. We assume that no GPU is available and thus install it without CUDA support. A CUDA enabled server with a GeForce 1080ti GPU will be made availabe on request to run computationally expensive and/or highly customized code.\n",
+    "5. Install [PyTorch](https://pytorch.org/) : `conda install pytorch torchvision -c pytorch` (Windows: `conda install pytorch-cpu torchvision-cpu -c pytorch`). We assume that no GPU is available and thus install it without CUDA support. A CUDA enabled server with a GeForce 1080ti GPU will be made availabe on request to run computationally expensive and/or highly customized code.\n",
     "6. Install all other dependencies (run one after another):\n",
     "```\n",
-    "conda install nodejs\n",
-    "conda install -c conda-forge ipywidgets umap-learn\n",
+    "conda install -c conda-forge nodejs ipywidgets umap-learn\n",
     "jupyter labextension install @jupyter-widgets/jupyterlab-manager\n",
     "conda install scipy matplotlib beautifulsoup4 requests scikit-image\n",
     "pip install face_recognition kaggle\n",
     "```\n",
-    "7. You might need to install Git, depending on your system configuration. You also may need cmake, installed through homebrew (`brew install cmake`) to install the `face_recognition' library.\n",
+    "7. You might need to install Git, depending on your system configuration. You also may need cmake (`pip install cmake`) to install the `face_recognition` library.\n",
     "8. Clone the [workshop repository](https://github.com/zentralwerkstatt/ESU): `git clone https://github.com/zentralwerkstatt/esu2019.git`.\n",
     "\n",
     "If everything worked, you should be able to run `jupyter-lab` without errors. A browser window will open with the Jupyter Lab interface. There, by clicking the \"File\" menu and the selecting \"New/Notebook\", a new Juypter notebook will open. Click on the first cell and enter `print('Hello world!')`, then press `Ctrl + Enter`. The text \"Hello world!\" will be printed below the cell. Congratulations, you are all set up!"
