End of week update

--- a/A5_Python_1.ipynb
+++ b/A5_Python_1.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 4\n",
+    "b = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +140,6 @@
     }
    ],
    "source": [
-    "a = 4\n",
-    "b = 2\n",
-    "\n",
     "print(a + b)\n",
     "print(a - b)\n",
     "print(a*b) # Multiplication\n",
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -237,14 +244,14 @@
      "text": [
       "[1, 2]\n",
       "[3, 4, 5]\n",
-      "4\n"
+      "[1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
     "print(int_list[:2]) # 1 2, the \"first two\" elements\n",
     "print(int_list[2:]) # 3 4 5, everything but the \"first two\" elements\n",
-    "print(int_list[-2]) # 4, the \"second to last\" element"
+    "print(int_list[:])"
    ]
   },
   {
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -283,19 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100, 2, 4, 5]\n"
+      "[100, 2, 3, 4, 5, 6, 6]\n"
      ]
     }
    ],
    "source": [
-    "new_int_list = int_list[:2] + int_list[-2:]\n",
+    "new_int_list = int_list[:2] + int_list[2:]\n",
     "print(new_int_list)"
    ]
   },
@@ -349,25 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A is zero\n"
+      "A is not zero\n"
      ]
     }
    ],
    "source": [
-    "a = 0\n",
+    "a = 1\n",
     "if (a == 0): \n",
     "    print('A is zero')\n",
-    "elif (a == 1):\n",
-    "    print('A is one')\n",
     "else:\n",
-    "    print('A is neither zero nor one')"
+    "    print('A is not zero')"
    ]
   },
   {
@@ -380,20 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A is zero, b is one\n",
       "A or b or both are one\n"
      ]
     }
    ],
    "source": [
-    "a = 1\n",
-    "b = 0\n",
+    "a = 0\n",
+    "b = 1\n",
     "if (a == 0 and b==1): \n",
     "    print('A is zero, b is one')\n",
     "if (a == 1 or b==1): \n",
@@ -418,29 +424,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n",
-      "Hello\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
      ]
     }
    ],
    "source": [
-    "for x in range(10):\n",
-    "    print('Hello')"
+    "for x in range(1,8):\n",
+    "    print(x)"
    ]
   },
   {
@@ -478,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -521,6 +524,7 @@
       "3\n",
       "4\n",
       "5\n",
+      "6\n",
       "6\n"
      ]
     }
@@ -539,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -555,63 +559,6 @@
    "source": [
     "for index, value in enumerate(string_list):\n",
     "    print(index, value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Flow control: while\n",
-    "\n",
-    "An alternative to the `for` loop is the `while` loop. This loop continues running until a specified condition is met, however other than the `for` loop it does not operate on lists. The simplest `while` loop is an infinite loop (do not run this):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Do NOT run this!\n",
-    "while True:\n",
-    "    print('forever')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A more useful variation will check the value of a variable:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 0\n",
-    "while a <= 10:\n",
-    "    print(a)\n",
-    "    a += 1"
    ]
   },
   {
@@ -636,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +592,7 @@
        "3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -711,46 +658,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "-1\n",
-      "1 2\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Arguments can be anything, even functions!\n",
-    "\n",
-    "def add(a, b):\n",
-    "    return a + b\n",
-    "\n",
-    "def subtract(a, b): # We can re-use arguments in a new scope\n",
-    "    return a - b\n",
-    "\n",
-    "def arbitrary(f, a, b):\n",
-    "    return f(a, b)\n",
-    "\n",
-    "print(arbitrary(add, 1, 2))\n",
-    "print(arbitrary(subtract, 1, 2))\n",
-    "print(arbitrary(print, 1, 2))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## <font color='red'>Exercises</font>\n",
     "\n",
-    "1. Write a function that calculates the factorial of an integer ($\\displaystyle 5! = \\prod^{5}_{i=1} = 5 \\times 4 \\times 3 \\times 2 \\times 1$). Advanced: using recursion.\n",
-    "3. Write a function that checks how many even numbers a list contains. Advanced: in one line using list comprehension (no Google!) "
+    "1. Write a function that calculates the factorial of an integer ($\\displaystyle 5! = \\prod^{5}_{i=1} = 5 \\times 4 \\times 3 \\times 2 \\times 1$).\n",
+    "3. Write a function that checks how many even numbers a list contains."
    ]
   }
  ],
