--- a/A6_Python_2.ipynb
+++ b/A6_Python_2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "empty_dict = {}\n",
-    "fruit = {'apples':1, 'bananas': 2}"
+    "fruit = {'cars':3, 'dragons': 2}"
    ]
   },
   {
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.zeros([3, 3, 3], dtype=np.float64)"
+    "a = np.zeros([10,10], dtype=np.float64)"
    ]
   },
   {
@@ -301,26 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]]\n",
-      "(3, 3, 3)\n",
-      "float64\n"
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
      ]
     }
    ],
