--- a/A2_Setup.ipynb
+++ b/A2_Setup.ipynb
@@ -47,10 +47,10 @@
     "5. Install [PyTorch](https://pytorch.org/) : `conda install pytorch torchvision -c pytorch` (Windows: `conda install pytorch-cpu torchvision-cpu -c pytorch`). We assume that no GPU is available and thus install it without CUDA support. A CUDA enabled server with a GeForce 1080ti GPU will be made availabe on request to run computationally expensive and/or highly customized code.\n",
     "6. Install all other dependencies (run one after another):\n",
     "```\n",
-    "conda install -c conda-forge nodejs ipywidgets umap-learn\n",
+    "conda install -c conda-forge nodejs ipywidgets umap-learn poppler\n",
     "jupyter labextension install @jupyter-widgets/jupyterlab-manager\n",
-    "conda install scipy matplotlib beautifulsoup4 requests scikit-image\n",
-    "pip install face_recognition kaggle\n",
+    "conda install scipy matplotlib beautifulsoup4 requests scikit-image tqdm\n",
+    "pip install face_recognition kaggle pdf2image\n",
     "```\n",
     "7. You might need to install Git, depending on your system configuration. You also may need cmake (`pip install cmake`) to install the `face_recognition` library.\n",
     "8. Clone the [workshop repository](https://github.com/zentralwerkstatt/ESU): `git clone https://github.com/zentralwerkstatt/esu2019.git`.\n",
