--- a/B4_Faces.ipynb
+++ b/B4_Faces.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,8 @@
     "    for file in files:\n",
     "        if file.endswith('.jpg'):\n",
     "            img_files.append(f'{root}/{file}')\n",
-    "print(f'{len(img_files)} images found')"
+    "print(f'{len(img_files)} images found')\n",
+    "img_files = img_files[:100]"
    ]
   },
   {
@@ -75,42 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7441ce6220ff41378cb133e2caa515cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=32780), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 10300 faces\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "savepoint = 32000\n",
+    "savepoint = 0\n",
     "border = 50 # Border around face in percent of face size\n",
-    "if not os.path.exists('faces'): os.makedirs('faces')\n",
+    "if not os.path.exists('faces_small'): os.makedirs('faces_small')\n",
     "\n",
     "faces = 0\n",
     "for n, path in enumerate(tqdm_notebook(img_files[savepoint:])):\n",
     "\n",
     "    image = face_recognition.load_image_file(path)\n",
+    "    \n",
+    "    print(image.shape)\n",
+    "    \n",
     "    face_locations = face_recognition.face_locations(image, number_of_times_to_upsample=0, model=\"cnn\")\n",
-    "\n",
+    "    \n",
     "    for face_nr, face_location in enumerate(face_locations):\n",
     "        \n",
     "        try:\n",
@@ -134,7 +116,7 @@
     "\n",
     "            faces+=1\n",
     "            file = path.split('/')[-1]\n",
-    "            face_file = f'faces/{face_nr+1}_{len(face_locations)}_{file}'\n",
+    "            face_file = f'faces_small/{file}_{face_nr+1}_{len(face_locations)}.jpg'\n",
     "            pil_image = np_PIL(image[top:bottom, left:right])\n",
     "            pil_image.save(face_file)\n",
     "        \n",
